--- a/zeebe-watcher-helm/templates/daemonset.yaml
+++ b/zeebe-watcher-helm/templates/daemonset.yaml
@@ -2,7 +2,7 @@ apiVersion: apps/v1
 kind: DaemonSet
 metadata:
   name: zeebe-node-watcher
-  namespace: {{ .Values.namespace }}
+  namespace: {{ .Values.namespace | quote }}
   labels:
     app: zeebe-node-watcher
 spec:
@@ -14,34 +14,36 @@ spec:
       labels:
         app: zeebe-node-watcher
     spec:
-      serviceAccountName: {{ .Values.serviceAccount.name }}
+      serviceAccountName: {{ .Values.serviceAccount.name | quote }}
+      nodeSelector:
+        node-role.kubernetes.io/zeebe: ""  # Restrict to nodes with this label
       containers:
       - name: watcher
-        image: {{ .Values.image.repository }}:{{ .Values.image.tag }}
-        imagePullPolicy: {{ .Values.image.pullPolicy }}
+        image: {{ .Values.image.repository | quote }}:{{ .Values.image.tag | quote }}
+        imagePullPolicy: {{ .Values.image.pullPolicy | quote }}
         command:
           - /bin/sh
           - -c
           - |
             NODE_NAME=$(echo $MY_NODE_NAME)
-            echo "Watching for terminating pods on node $NODE_NAME..."
-            kubectl get pods -l app=zeebe-broker --watch -o json | jq -c '. | select(.object.metadata.deletionTimestamp != null)' | while read -r event; do
+            echo "Watching for terminating Zeebe broker pods on node $NODE_NAME..."
+            kubectl get pods -l app.kubernetes.io/component=zeebe-broker --watch -o json | jq -c '. | select(.object.metadata.deletionTimestamp != null)' | while read -r event; do
               POD_NODE=$(echo $event | jq -r '.object.spec.nodeName')
               POD_NAME=$(echo $event | jq -r '.object.metadata.name')
 
               if [ "$POD_NODE" = "$NODE_NAME" ]; then
-                echo "Pod $POD_NAME is terminating on $NODE_NAME. Tainting node immediately..."
-                kubectl taint nodes $NODE_NAME zeebe-broker=true:NoSchedule --overwrite
+                echo "Pod $POD_NAME (Zeebe broker) is terminating on $NODE_NAME. Tainting node to prevent rescheduling on this node..."
+                kubectl taint nodes $NODE_NAME zeebe-broker-terminating=true:NoSchedule --overwrite
 
                 while kubectl get pod $POD_NAME >/dev/null 2>&1; do
                   sleep 1
                 done
 
-                echo "Pod fully terminated. Keeping taint for 20 seconds..."
-                sleep 20
+                echo "Pod $POD_NAME fully terminated. Keeping taint for 20 seconds to allow rescheduling elsewhere..."
+                sleep 30
 
-                kubectl taint nodes $NODE_NAME zeebe-broker:NoSchedule-
-                echo "Taint removed from $NODE_NAME."
+                kubectl taint nodes $NODE_NAME zeebe-broker-terminating:NoSchedule-
+                echo "Taint removed from $NODE_NAME. Pod can now schedule on other nodes."
               fi
             done
         env:
@@ -51,8 +53,8 @@ spec:
               fieldPath: spec.nodeName
         resources:
           limits:
-            cpu: {{ .Values.resources.limits.cpu }}
-            memory: {{ .Values.resources.limits.memory }}
+            cpu: {{ .Values.resources.limits.cpu | quote }}
+            memory: {{ .Values.resources.limits.memory | quote }}
           requests:
-            cpu: {{ .Values.resources.requests.cpu }}
-            memory: {{ .Values.resources.requests.memory }}
+            cpu: {{ .Values.resources.requests.cpu | quote }}
+            memory: {{ .Values.resources.requests.memory | quote }}
