--- a/zeebe-watcher-helm/templates/daemonset.yaml
+++ b/zeebe-watcher-helm/templates/daemonset.yaml
@@ -30,18 +30,17 @@ spec:
             kubectl get pods -l app.kubernetes.io/component=zeebe-broker --watch -o json | jq -c '. | select(.object.metadata.deletionTimestamp != null)' | while read -r event; do
               POD_NODE=$(echo $event | jq -r '.object.spec.nodeName')
               POD_NAME=$(echo $event | jq -r '.object.metadata.name')
-
-              if [ "$POD_NODE" = "$NODE_NAME" ]; then
-                echo "Pod $POD_NAME (Zeebe broker) is terminating on $NODE_NAME. Tainting node to prevent rescheduling on this node..."
+              
+              # Check if pod is controlled by a StatefulSet
+              OWNER_KIND=$(echo $event | jq -r '.object.metadata.ownerReferences[] | select(.controller == true) | .kind')
+              if [ "$POD_NODE" = "$NODE_NAME" ] && [ "$OWNER_KIND" = "StatefulSet" ]; then
+                echo "StatefulSet-controlled Pod $POD_NAME (Zeebe broker) is terminating on $NODE_NAME. Tainting node to prevent rescheduling on this node..."
                 kubectl taint nodes $NODE_NAME zeebe-broker-terminating=true:NoSchedule --overwrite
-
                 while kubectl get pod $POD_NAME >/dev/null 2>&1; do
                   sleep 1
                 done
-
-                echo "Pod $POD_NAME fully terminated. Keeping taint for 20 seconds to allow rescheduling elsewhere..."
+                echo "Pod $POD_NAME fully terminated. Keeping taint for 30 seconds to allow rescheduling elsewhere..."
                 sleep 30
-
                 kubectl taint nodes $NODE_NAME zeebe-broker-terminating:NoSchedule-
                 echo "Taint removed from $NODE_NAME. Pod can now schedule on other nodes."
               fi
